2012-02-16  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* testsuite/testBridgeRuleEvaluation.cpp: Adapt testcase.

	* include/mcs/BridgeRuleTable.h (getAllByAddress): New member function.
	* src/mcs/BridgeRuleEvaluator.cpp: Likewise.

	* include/mcs/BridgeRuleEvaluator.h: Evaluate the whole table.

2012-02-14  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* include/mcs/BeliefTable.h: New typedef.

	* include/mcs/NewContext.h: New file.

	* src/dmcs/DLVInstantiator.cpp: Fix input reading bug.

	* examples/testAbstractContext.inp: Add a blank line.

	* testsuite/testBridgeRuleEvaluation.cpp: Fix testcase.

	* include/mcs/BridgeRuleEvaluator.h: Pass input and heads as pointers.
	* src/mcs/BridgeRuleEvaluator.cpp: Likewise.

	* include/dmcs/BeliefStateResultAdder.h: Add heads.
	* src/dmcs/DLVEvaluator.cpp: Likewise.

2012-01-27  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* testsuite/testResultParser.cpp: Remove include boost::thread.

	* testsuite/testAbstractContext.cpp: Add testRunningDLV.

	* testsuite/Makefile.am (testAbstractContext_LDADD): Add more libs.

	* src/dmcs/DLVEvaluator.cpp: Finish with solve().

	* include/network/NewConcurrentMessageDispatcher.h: Store queue_size.
	* src/network/NewConcurrentMessageDispatcher.cpp: Likewise.

	* include/mcs/NewBeliefState.h: Add method for finding TRUE bits.

	* include/dmcs/Makefile.am: Add BeliefStateResultAdder.h.

	* include/dmcs/Instantiator.h: Remove InputProvider.
	* src/dmcs/Instantiator.cpp: Likewise.

	* include/dmcs/DLVInstantiator.h: Store local_kb as a string.
	* src/dmcs/DLVInstantiator.cpp: Likewise.

	* include/dmcs/DLVEvaluator.h: More parameters to solve().
	* include/dmcs/Evaluator.h: Likewise.
	* src/dmcs/Evaluator.cpp: Likewise.

	* configure.ac: Show DLVPATH.

	* examples/testAbstractContext.inp: Update eample.

2012-01-26  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* testsuite/Makefile.am: Add testAbstractContext.

	* src/dmcs/Makefile.am: Add Evaluator.cpp and DLVEvaluator.cpp.
