@@ -1,5 +1,11 @@
 2012-02-16  Minh Dao-Tran  <dao@kr.tuwien.ac.at>
 
+	* src/mcs/BridgeRuleEvaluator.cpp: Return Heads(PlusBeliefState).
+	* include/mcs/BridgeRuleEvaluator.h: Likewise.
+
+	* include/mcs/Makefile.am: Add Heads.h.
+	* include/mcs/Heads.h: New file.
+
 	* testsuite/testBridgeRuleEvaluation.cpp: Adapt testcase.
 
 	* include/mcs/BridgeRuleTable.h (getAllByAddress): New member function.
